--- a/q1/style.css
+++ b/q1/style.css
@@ -1,1 +1,12 @@
+    .lesson-card img {
+      width: 100%;
+      height: 120px;
+      object-fit: contain;
+      background-color: white; 
 
+    } 
+
+    .time-text {
+      color: purple;
+      font-weight: bold;
+    }
