--- a/q2/style.css
+++ b/q2/style.css
@@ -7,11 +7,19 @@ body {
 
 header {
   text-align: center;
-  padding: 32px 16px;
   background-color: maroon;
   color: seashell;
-  position: sticky;
+  position: fixed;
   top: 0;
+  width: 100%;
+  padding: 32px 16px;
+  z-index: 1000;
+  margin-bottom: 100px;
+}
+
+main{
+    margin-top: 180px;
+    margin-bottom: 50px;
 }
 
 .card-container {
