--- a/q2/style.css
+++ b/q2/style.css
@@ -40,7 +40,7 @@ main{
   border-radius: 12px;
   padding: 20px;
   margin: 32px auto;
-  max-width: 900px;
+  max-width: 50%;
   background-color: white;
   direction: rtl;
 }
@@ -62,6 +62,7 @@ main{
 
 .card-text-section {
   flex: 1;
+  min-width: 200px;
 }
 
 .card-topic {
@@ -102,4 +103,53 @@ footer{
   .card-image {
     width: 100%;
   }
+}
+
+
+
+
+.side-nav {
+  position: fixed;
+  top: 25%;
+  right: 0;
+  background-color: transparent;
+  padding: 10px;
+  font-size: 16px;
+  max-width: 250px;
+  direction: rtl;
+  color: black;
+  z-index: 1000;
+}
+
+.side-nav a {
+  color: maroon;
+  text-decoration: underline dotted;
+}
+
+.side-nav strong {
+  font-weight: bold;
+}
+
+
+
+.card-buttons {
+  margin-top: 16px;
+  display: flex;
+  gap: 16px;
+  justify-content: center; 
+}
+
+.text-button {
+  background-color: white;
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 6px 12px;
+  cursor: pointer;
+  font-family: Arial;
+  font-size: 16px;
+  transition: 0.3s;
+}
+
+.text-button:hover {
+  background-color: white;
 }
