--- a/q2/style.css
+++ b/q2/style.css
@@ -80,10 +80,30 @@ main{
   width: 300px;
   height: auto;
   border-radius: 8px;
+  display: block;
 }
 
+.card-image-wrapper {
+  position: relative;
+  display: inline-block;
+}
+.hover-tip {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  padding: 10px;
+  background-color: black; 
+  color: white;
+  font-size: 14px;
+  text-align: center;
+  opacity: 0;
+  border-radius: 8px;
+}
 
-
+.card-image-wrapper:hover .hover-tip {
+  opacity: 0.7;
+}
 
 
 footer{
