--- a/q2/style.css
+++ b/q2/style.css
@@ -108,11 +108,19 @@ main{
 }
 
 
-footer{
-    background-color: maroon;
-    color: seashell;
-    text-align: center;
-    padding: 16px;
+footer {
+  background-color: maroon;
+  color: seashell;
+  text-align: center;
+  padding: 24px 16px;
+  font-weight: bold;
+}
+
+footer a {
+  color: seashell;           
+  text-decoration: none;     
+  font-weight: bold;
+  margin: 0 8px;             
 }
 
 
