--- a/q3/style.css
+++ b/q3/style.css
@@ -24,3 +24,28 @@
       border: 2px solid grey;
       border-radius: 8px;
     }
+
+        label {
+      font-weight: bold;
+      font-size: 14px;
+      margin-bottom: 2px;
+
+    }
+
+    input, textarea, select {
+      width: 80%;
+      padding: 4px;
+      margin-top: 2px;
+      margin-bottom: 4px;
+      border: 1px solid whitesmoke;
+      border-radius: 4px;
+    }
+
+    button {
+      background-color: maroon;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
