--- a/q3/style.css
+++ b/q3/style.css
@@ -49,6 +49,15 @@
       border-radius: 4px;
       cursor: pointer;
     }
+        button a {
+      background-color: maroon;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      text-decoration: none;
+    }
 
 
 .form-message {
